monticore-generator/src/test/resources/cocos/invalid/A0276/A0276.mc4
package cocos.invalid.A0276;

grammar A0276 {

  external A;

}